multiple edits